@@ -989,7 +989,7 @@
 	</h5></div></div></div><p></p><div class="section"><div class="titlepage"><div><div><h6 class="title"><a id="branch.text_insert.info"></a>
 	    Description
 	  </h6></div></div></div><p>This test inserts a number of values with keys from an arbitrary
-	  text ([ wickland96thirty ]) into a container
+	  text ([wickland96thirty]) into a container
 	  using <code class="function">insert</code> . It measures the average time
 	  for <code class="function">insert</code> as a function of the number of
 	  values inserted.</p><p>The test checks the effect of different underlying
@@ -1207,7 +1207,7 @@
 	</h5></div></div></div><p></p><div class="section"><div class="titlepage"><div><div><h6 class="title"><a id="branch.text_lor_find.info"></a>
 	    Description
 	  </h6></div></div></div><p>This test inserts a number of values with keys from an
-	  arbitrary text ([ wickland96thirty ]) into
+	  arbitrary text ([wickland96thirty]) into
 	  a container, then performs a series of finds using
 	  <code class="function">find</code>. It is different than Tree-Based and
 	  Trie-Based Text <code class="function">find</code> Find Timing Test in the
@@ -1467,7 +1467,7 @@
 	    Description
 	  </h6></div></div></div><p>This test inserts a number of pairs into a container. The
 	  first item of each pair is a string from an arbitrary text
-	  [wickland96thirty], and
+	  ([wickland96thirty]), and
 	  the second is a uniform i.i.d.integer. The container is a
 	  "multimap" - it considers the first member of each pair as a
 	  primary key, and the second member of each pair as a secondary
@@ -1639,7 +1639,7 @@
 	    Description
 	  </h6></div></div></div><p>This test inserts a number of pairs into a container. The
 	  first item of each pair is a string from an arbitrary text
-	  [wickland96thirty], and
+	  ([wickland96thirty]), and
 	  the second is a uniform integer. The container is a
 	  "multimap" - it considers the first member of each pair as a
 	  primary key, and the second member of each pair as a secondary
@@ -1811,7 +1811,7 @@
 	    Description
 	  </h6></div></div></div><p>This test inserts a number of pairs into a container. The
 	  first item of each pair is a string from an arbitrary text
-	  [wickland96thirty], and
+	  ([wickland96thirty]), and
 	  the second is a uniform integer. The container is a
 	  "multimap" - it considers the first member of each pair as a
 	  primary key, and the second member of each pair as a secondary
@@ -1985,7 +1985,7 @@
 	    Description
 	  </h6></div></div></div><p>This test inserts a number of pairs into a container. The
 	  first item of each pair is a string from an arbitrary text
-	  [wickland96thirty], and
+	  ([wickland96thirty]), and
 	  the second is a uniform integer. The container is a
 	  "multimap" - it considers the first member of each pair as a
 	  primary key, and the second member of each pair as a secondary
@@ -2159,7 +2159,7 @@
 	    Description
 	  </h6></div></div></div><p>This test inserts a number of pairs into a container. The
 	  first item of each pair is a string from an arbitrary text
-	  [wickland96thirty], and
+	  ([wickland96thirty]), and
 	  the second is a uniform integer. The container is a
 	  "multimap" - it considers the first member of each pair as a
 	  primary key, and the second member of each pair as a secondary
@@ -2328,7 +2328,7 @@
 	    Description
 	  </h6></div></div></div><p>This test inserts a number of pairs into a container. The
 	  first item of each pair is a string from an arbitrary text
-	  [wickland96thirty], and
+	  ([wickland96thirty]), and
 	  the second is a uniform integer. The container is a
 	  "multimap" - it considers the first member of each pair as a
 	  primary key, and the second member of each pair as a secondary
