@@ -354,10 +354,7 @@
 	    priority-queues container), there is a possible need for
 	    different types of iterators for self-organizing containers:
 	    the iterator concept seems overloaded to mean two different
-	    things (in some cases). <em><span class="remark"> XXX
-	    "ds_gen.html#find_range"&gt;Design::Associative
-	    Containers::Data-Structure Genericity::Point-Type and Range-Type
-	    Methods</span></em>.
+	    things (in some cases). 
 	  </p><div class="section"><div class="titlepage"><div><div><h6 class="title"><a id="associative.iterators.using"></a>Using Point Iterators for Range Operations</h6></div></div></div><p>
 	      Suppose <code class="classname">cntnr</code> is some associative
 	      container, and say <code class="varname">c</code> is an object of
