@@ -656,7 +656,9 @@
 	    Α<sub>max</sub>, and the hash table maintains the
 	    invariant that</p><p>Α<sub>min</sub> ≤ (number of
 	    stored elements) / (hash-table size) ≤
-	    Α<sub>max</sub><em><span class="remark">load factor min max</span></em></p><p>Collision-check policies work in the opposite direction of
+	    Α<sub>max</sub>
+            
+            </p><p>Collision-check policies work in the opposite direction of
 	    load-check policies. They focus on keeping the number of
 	    collisions moderate and hoping that the size of the table will
 	    not grow very large, instead of keeping a moderate load-factor
