@@ -1756,7 +1756,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
     {
       return __make_from_tuple_impl<_Tp>(
         std::forward<_Tuple>(__t),
-	make_index_sequence<tuple_size_v<decay_t<_Tuple>>>{});
+	make_index_sequence<tuple_size_v<remove_reference_t<_Tuple>>>{});
     }
 #endif // C++17
 
