@@ -1,3 +1,11 @@
+2019-05-17  Jonathan Wakely  <jwakely@redhat.com>
+
+	* doc/xml/manual/status_cxx2020.xml: Update P0608R3, P0777R1, and
+	P1165R1 entries.
+	* doc/html/*: Regenerate.
+	* include/std/tuple (make_from_tuple): Use remove_reference_t instead
+	of decay_t (P0777R1).
+
 2019-05-17  François Dumont  <fdumont@gcc.gnu.org>
 
 	Move from state of allocators (LWG2593)
